This project analyzes advertising data across users, campaigns, ads, and ad events to uncover performance trends and user behavior insights. It evaluates key metrics like CTR, Conversion Rate, CPC, and CPA, highlights top-performing campaigns, and explores demographic patterns to guide targeted and cost-effective ad strategies.

--- a/Advertising Data Analysis.ipynb
+++ b/Advertising Data Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbsE4MNCC2eYB/WXC5mQoT",
+      "authorship_tag": "ABX9TyOJ7oXoSuiLiGMliaRkAFmr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,34 +27,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Lint3T5wNVB8"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "727ef69f"
-      },
-      "source": [
-        "# Task\n",
-        "Analyze the data from the files \"/content/ad_campaign_db.sqlite\", \"/content/ad_events.csv\", \"/content/ads.csv\", \"/content/campaigns.csv\", and \"/content/users.csv\" to understand what they convey, present the findings graphically, and extract all outcomes."
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "49c93405"
       },
       "source": [
-        "## Load data\n",
+        "# Advertising Data Analysis: Performance Insights and User Behavior Trends\n",
         "\n",
-        "### Subtask:\n",
-        "Load data from the provided files (`ad_campaign_db.sqlite`, `ad_events.csv`, `ads.csv`, `campaigns.csv`, and `users.csv`) into pandas DataFrames.\n"
+        "### Discription:\n",
+        "###This analysis uncovers key trends in Netflix content, highlighting genre popularity, top producing countries, and release patterns. It reveals gaps in niche genres and opportunities to expand in underrepresented markets, helping Netflix optimize content strategy and target new audiences for growth."
       ]
     },
     {
